kubernetes/apps/default/ceremony/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app ceremony
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: *app
          image: "harbor.g-eye.io/mgueye01/ceremony:0.2"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 500Mi
            limits:
              cpu: 200m
              memory: 500Mi
