kubernetes/apps/default/ceremony/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app ceremony
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
